Project

General

Profile

Actions

Bug #20598

closed

Corruption of internal encoding string

Bug #20598: Corruption of internal encoding string

Added by peterzhu2118 (Peter Zhu) about 2 years ago. Updated about 2 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:118399]

Description

GitHub PR: https://github.com/ruby/ruby/pull/11068

Just like #20595, Encoding#name_list and Encoding#aliases can have their strings corrupted when Encoding.default_internal is set to nil.

Actions

Also available in: PDF Atom